# hereicom-api

./: Dockerfile.dev  README.md  dev.dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: master_hereicom-api.yml
src/: main.py
src/api/: __init__.py  deps.py
src/api/endpoints/: apikey.py  items.py  login.py  lora.py  users.py
src/core/: config.py  security.py
src/crud/: __init__.py  apikey.py  base.py
src/db/: base.py  base_class.py  init_db.py  session.py
src/models/: __init__.py  apikey.py  item.py  user.py
src/schemas/: __init__.py  apikey.py  lora.py
