[tool.poetry]
name = "hereicom-api"
version = "0.1.0"
description = ""
authors = ["Aron Stefánsson <aronstef@users.noreply.github.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "~3.8"
fastapi = {extras = ["all"], version = "*"}
gunicorn = "*"
SQLAlchemy = "*"
psycopg2 = "*"
python-jose = {extras = ["cryptography"], version = "*"}
passlib = {extras = ["bcrypt"], version = "*"}

[tool.poetry.dev-dependencies]
pylint = "*"
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
